--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
     <link rel="shortcut icon" href="favicon.png">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="google-site-verification" content="y5J9VjaFK1bfcWdVcn8K9ngEU1YeaZtdvv8rY8-svmQ" />
 
 
     <meta name="description" content="">
